[package]
name = "shad_tests"
description = "Shad tests"
readme = "../README.md"
keywords = ["language", "gpu", "rendering", "compute", "shader"]
categories = ["compilers"]
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shad_error.workspace = true
shad_parser.workspace = true
shad_transpiler.workspace = true
shad_analyzer.workspace = true
shad_runner.workspace = true
itertools.workspace = true
strip-ansi-escapes.workspace = true

[lints]
workspace = true

[[test]]
name = "integration"
path = "integration/main.rs"
