[package]
name = "shad_tests"
description = "Shad tests"
readme = "../README.md"
keywords = ["language", "gpu", "rendering", "compute", "shader"]
categories = ["compilers"]
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shad.workspace = true
itertools.workspace = true
rstest.workspace = true
strip-ansi-escapes.workspace = true

[lints]
workspace = true

[[test]]
name = "integration"
path = "integration/main.rs"
