[package]
name = "shad"
description = "Shad language CLI"
readme = "../../README.md"
keywords = ["language", "gpu", "rendering", "compute", "shader"]
categories = ["compilers"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets.workspace = true
clap.workspace = true
futures.workspace = true
include_dir.workspace = true
itertools.workspace = true
log.workspace = true
petgraph.workspace = true
rhai.workspace = true
serde.workspace = true
serde_valid.workspace = true
serde_yml.workspace = true
walkdir.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true, features = ["rwh_05"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android_logger.workspace = true
winit = { workspace = true, features = ["android-native-activity", "rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
wgpu = { workspace = true, features = ["wgsl"] }

[lints]
workspace = true
