[package]
name = "shad_analyzer"
description = "Shad language analyzer"
readme = "../../README.md"
keywords = ["language", "gpu", "rendering", "compute", "shader"]
categories = ["compilers"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shad_error.workspace = true
shad_parser.workspace = true
annotate-snippets.workspace = true
fxhash.workspace = true
log = "0.4.22"

[lints]
workspace = true
