[package]
name = "shad_error"
description = "Shad language errors"
readme = "../../README.md"
keywords = ["language", "gpu", "rendering", "compute", "shader"]
categories = ["compilers"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets.workspace = true
derive-where.workspace = true
fxhash.workspace = true
itertools.workspace = true

[lints]
workspace = true
