[package]
name = "shad_experiment"
description = "Shad language CLI"
readme = "../../README.md"
keywords = ["language", "gpu", "rendering", "compute", "shader"]
categories = ["compilers"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets.workspace = true
include_dir.workspace = true
itertools.workspace = true
regex.workspace = true
serde.workspace = true
serde_valid.workspace = true
serde_yml.workspace = true
walkdir.workspace = true

[lints]
workspace = true
