[package]
name = "shad_runner"
description = "Shad language runner"
readme = "../../README.md"
keywords = ["language", "gpu", "rendering", "compute", "shader"]
categories = ["compilers"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shad_error.workspace = true
shad_parser.workspace = true
shad_transpiler.workspace = true
shad_analyzer.workspace = true
futures.workspace = true
wgpu.workspace = true
annotate-snippets.workspace = true
fxhash.workspace = true

[dev-dependencies]
strip-ansi-escapes.workspace = true

[lints]
workspace = true
