[package]
name = "shad_rust_example"
description = "Rust example to illustrate how to use render and compute shaders"
readme = "../../README.md"
keywords = ["language", "gpu", "shader", "rendering", "compute"]
categories = ["compilers"]
exclude = [".github", "README.md"]
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck.workspace = true
futures.workspace = true
log.workspace = true
pretty_env_logger.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true, features = ["rwh_05"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android_logger.workspace = true
winit = { workspace = true, features = ["android-native-activity", "rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger.workspace = true
wgpu = "23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true
wgpu = { version = "23.0", features = ["webgl", "wgsl"] }

[lints]
workspace = true
